--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,27 +10,53 @@
   --Very-dark-blue: hsl(220, 13%, 13%);
   --Dark-grayish-blue: hsl(219, 9%, 45%);
   --Grayish-blue: hsl(220, 14%, 75%);
+  --Grayish-blue-opacity: hsla(0, 0%, 0%, 70%);
   --Light-grayish-blue: hsl(223, 64%, 98%);
   --White: hsl(0, 0%, 100%);
   --Black: hsl(0, 0%, 0%);
 }
 
 body {
-    font-family: 'Kumbh Sans', sans-serif;
+  font-family: "Kumbh Sans", sans-serif;
+}
+
+.custom-scroll {
+  --scrollbarBG: rgba(254, 220, 194, 0.98);
+  --thumbBG: #ff7d1a;
+}
+.custom-scroll::-webkit-scrollbar {
+  width: 11px;
+}
+.custom-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+}
+.custom-scroll::-webkit-scrollbar-track {
+  background: var(--scrollbarBG);
+}
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: var(--thumbBG);
+  border-radius: 6px;
+  border: 3px solid var(--scrollbarBG);
 }
 
 @layer components {
-    .items.active {
-        @apply border-[--Orange] transition ease-linear;
-    }
-    .items.active li {
-        @apply text-[--Very-dark-blue];
-    }
+  .items.active {
+    @apply border-[--Orange] transition ease-linear;
+  }
+  .items.active li {
+    @apply text-[--Very-dark-blue];
+  }
 
-    .basket:hover ~ span, .baskets.active span{
-        @apply block transition-all ease-linear duration-200;
-    }
-    .baskets.active img{
-        @apply drop-shadow;
-    }
+  .basket:hover ~ span,
+  .baskets.active span {
+    @apply block transition-all ease-linear duration-200;
+  }
+  .baskets.active img {
+    @apply drop-shadow;
+  }
+
+  .status-active {
+    @apply after:content-[''] after:absolute after:w-[40px] after:h-[40px] md:after:w-[56px] md:after:h-[56px] after:border-[--Orange] after:border-dashed after:animate-spin after:border-[20px] after:top-[-3px] after:rounded-full after:left-[-3px] after:right-[-3px] after:bottom-[-3px] after:transition-all after:duration-1000 after:ease-in-out after:z-10;
+  }
 }
