--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
 :root {
   --Orange: hsl(26, 100%, 55%);
+  --Orange-opacity: hsla(26, 100%, 81%, 0.4);
   --Pale-orange: hsl(25, 100%, 94%);
 
   --Very-dark-blue: hsl(220, 13%, 13%);
@@ -38,6 +39,10 @@ body {
   background-color: var(--thumbBG);
   border-radius: 6px;
   border: 3px solid var(--scrollbarBG);
+}
+
+.active-swiper {
+  border: 3px solid var(--Orange);
 }
 
 @layer components {
